WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216391
[JSC] customGetterSetterFunctionCall should have proper exception checking
https://bugs.webkit.org/show_bug.cgi?id=216391
Summary
[JSC] customGetterSetterFunctionCall should have proper exception checking
Yusuke Suzuki
Reported
2020-09-10 18:02:18 PDT
[JSC] customGetterSetterFunctionCall should have proper exception checking
Attachments
Patch
(4.17 KB, patch)
2020-09-10 18:02 PDT
,
Yusuke Suzuki
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-09-10 18:02:58 PDT
Created
attachment 408502
[details]
Patch
Yusuke Suzuki
Comment 2
2020-09-10 18:03:00 PDT
<
rdar://problem/68631643
>
Mark Lam
Comment 3
2020-09-10 20:27:23 PDT
Comment on
attachment 408502
[details]
Patch Thanks for fixing this.
EWS
Comment 4
2020-09-10 23:38:03 PDT
Committed
r266911
: <
https://trac.webkit.org/changeset/266911
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408502
[details]
.
Michael Saboff
Comment 5
2020-09-11 10:26:50 PDT
Comment on
attachment 408502
[details]
Patch r=me
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug