[JSC] customGetterSetterFunctionCall should have proper exception checking https://bugs.webkit.org/show_bug.cgi?id=216391 <rdar://problem/68631643>

Reviewed by Mark Lam.

Source/JavaScriptCore:

Add appropriate exception checking to customGetterSetterFunctionCall.

* runtime/JSCustomGetterSetterFunction.cpp:
(JSC::JSCustomGetterSetterFunction::customGetterSetterFunctionCall):

LayoutTests:

* js/dom/custom-getter-setter-exception-check-expected.txt: Added.
* js/dom/custom-getter-setter-exception-check.html: Added.


Canonical link: https://commits.webkit.org/229231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266911 268f45cc-cd09-0410-ab3c-d52691b4dbfc